# secure-vpn-application

./: CMakeCache.txt  CMakeLists.txt  README.md
VPNClient/: CMakeLists.txt  Encryption.cpp  Tunnel.cpp  Tunnel.h  VPNClient.cpp  VPNClient.h  main_client.cpp
VPNClient/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
VPNClient/include/: Encryption.h  Tunnel.h  VPNClient.h
VPNClient/src/: Encryption.cpp  Tunnel.cpp  VPNClient.cpp  main_client.cpp
VPNServer/: CMakeCache.txt  CMakeLists.txt  Encryption.h  Makefile  VPNServer.cpp  VPNServer.h  cmake_install.cmake  main_server.cpp
VPNServer/include/: Encryption.h  Tunnel.h  VPNServer.h
VPNServer/src/: Encryption.cpp  Tunnel.cpp  VPNServer.cpp  main_server.cpp
cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SecureVPN.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmake-build/VPNClient/: VPNClient.vcxproj  VPNClient.vcxproj.filters  cmake_install.cmake
cmake-build/VPNClient/VPNClient.dir/Debug/VPNClient.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  VPNClient.lastbuildstate
cmake-build/VPNServer/: VPNServer.vcxproj  VPNServer.vcxproj.filters  cmake_install.cmake
cmake-build/VPNServer/VPNServer.dir/Debug/VPNServer.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  VPNServer.lastbuildstate
cmake-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
